fixed bg image gap

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -8,7 +8,7 @@
   background-image: image-url("PM.jpg");
   position: fixed;
   width: 100%;
-  height: 900px; /*same height as jumbotron */
+  height: 910px; /*same height as jumbotron */
   top:0;
   left:0;
   z-index: -1;
@@ -21,7 +21,7 @@
 }
 
 .jumbotron {
-  height: 900px;
+  height: 910px;
   color: white;
   text-shadow: #444 0 1px 1px;
   margin-bottom: -250px;
